--- a/content/reklam-sponsorluk.html
+++ b/content/reklam-sponsorluk.html
@@ -1,6 +1,8 @@
 +++
-title = "Dergiye Reklam Ver"
+title="Reklam ve Sponsorluk"
+seotitle = "Dergiye Reklam Ver Tanıtımını Yap - Fiyat Listesi"
 url = "reklam-sponsorluk/"
+description="Dergimize en uygun fiyatlarla reklam vermek ister misiniz? Markut, nitelikli içerikleriyle aylık olarak çıkmaktadır. Dergimize sponsor olarak fayda sağlayın."
 type="page"
 +++
 
