Reklam ve google adsense

--- a/content/reklam-sponsorluk.html
+++ b/content/reklam-sponsorluk.html
@@ -88,13 +88,6 @@ type="page"
 </div>
 
 <div class="row mb-4">
-  <strong class="col-md-3">Tıklanabilir Öğe</strong>
-  <div class="col-md-3 bg-green p-2">✓ Okuyucular, hedef bağlantıya tıklayarak hızlıca ulaşır.</div>
-  <div class="col-md-3 bg-light p-2">✓ Tıklanabilir öğelere yer verilebilir.</div>
-  <div class="col-md-3 bg-grey p-2">×</div>
-</div>
-
-<div class="row mb-4">
   <strong class="col-md-3">Animasyon</strong>
   <div class="col-md-3 bg-green p-2">✓ Kapak tasarımlarımızda ve site içerisinde
     animasyon ögelerine yer veriyoruz.</div>
@@ -110,60 +103,14 @@ type="page"
   <div class="col-md-3 bg-grey p-2">×</div>
 </div>
 
-<div class="row mb-4">
-  <strong class="col-md-3">Özel Sponsor Sayfası</strong>
-  <div class="col-md-3 bg-green p-2">✓ Tüm sponsorlar markut.net/dergi-sponsorlari alanında listelenir. Kalıcı backlink sağlanır.</div>
-  <div class="col-md-3 bg-light p-2">× Önceki sayılardaki sponsorluklar raporlanmaz.</div>
-  <div class="col-md-3 bg-grey p-2">×</div>
-</div>
-
-<div class="row mb-4">
-  <strong class="col-md-3">Kolay Erişim</strong>
-  <div class="col-md-3 bg-green p-2">✓ Sitemize arama motorlarından, Instagram, Pinterest, Tumblr aracılığıyla
-    kullanıcılar bizi bulabilir.</div>
-  <div class="col-md-3 bg-light p-2">×</div>
-  <div class="col-md-3 bg-grey p-2">×</div>
-</div>
-
-<div class="row mb-4">
-  <strong class="col-md-3">Hızlı Etkileşim</strong>
-  <div class="col-md-3 bg-green p-2">✓ Sunucu hızımız 300 mili saniye altında yanıt vermektedir. Sitedeki tüm kod ve tasarımlar
-    MARKUT ekibi tarafından yapılmıştır. 2 Saniye altında web sayfanın tamamı yüklenir.</div>
-  <div class="col-md-3 bg-light p-2">×</div>
-  <div class="col-md-3 bg-grey p-2">×</div>
-</div>
-
-<div class="row mb-4">
-  <strong class="col-md-3">İçerik Yönetim Sistemi</strong>
-  <div class="col-md-3 bg-green p-2">✓ İçeriklerimizi oluştururken CMS altyapısı barındırırız.
-    Yazılar yayınlanmadan önce 9 yazarımız tarafından okunur, gerekli düzeltmeler yapılır.</div>
-  <div class="col-md-3 bg-light p-2">×</div>
-  <div class="col-md-3 bg-grey p-2">×</div>
-</div>
-
-<div class="row mb-4">
-  <strong class="col-md-3">Sürekli Güncel</strong>
-  <div class="col-md-3 bg-green p-2">✓ İçeriklerimizi güncel tutmak için editörlerimiz tarafından kontrol edilip gerekli güncellemeler yapılır. Önceki sayılarımız yeni okuyucular tarafından okunur.</div>
-  <div class="col-md-3 bg-light p-2">×</div>
-  <div class="col-md-3 bg-grey p-2">×</div>
-</div>
-
-<div class="row mb-4">
-  <strong class="col-md-3">Her Sayfa Özel Tasarlanır</strong>
-  <div class="col-md-3 bg-green p-2">✓ Website yapısında olsak da PDF ve basılı dergiler gibi tüm sayfalar özel olarak tasarlanır.
-    Bootstrap Framework ile ızgara sistemi kullanılır. Sayfalardaki görseller optimize edilir.</div>
-  <div class="col-md-3 bg-light p-2">✓</div>
-  <div class="col-md-3 bg-grey p-2">✓</div>
-</div>
-
 <br><br><br><br>
 
 <h4>Süreç İşleyişi</h4>
 <div class="row">
   <div class="col-md-4">1. Sponsorluk için form doldurulur.</div>
-  <div class="col-md-4">2. Firma onaylanır/reddedilir. Buna yönelik başvuru yapan kişinin mail adresine; ön izleme linkiyle beraber, ödeme adresi gönderilir.</div>
+  <div class="col-md-4">2. Firmaya reklam alanıyla ilgili bilgilendirme gönderilir. Buna yönelik başvuru yapan kişinin mail adresine; ön izleme linkiyle beraber, ödeme adresi gönderilir.</div>
   <div class="col-md-4">3. Ödeme sonrası, reklam sitede yayınlanır.</div><br><br><br>
- <div class="col-md-12"><small><br><br>Tüm süreç 24 saat içerisinde tamamlanmış olur. Reklam yayınlandığından itibaren 30/90 gün yayında kalır. Son 3 gün bilgilendirme gönderilerek 30/90. gün yayından kaldırılır.</small></div>
+ <div class="col-md-12"><small><br><br>Tüm süreç 24-36 saat içerisinde tamamlanmış olur. Reklam yayınlandığından itibaren 30|90 gün yayında kalır. Son 3 gün bilgilendirme gönderilerek uzatma veya kaldırma işlemi yapılır.</small></div>
 </div>
 <br><br><br>
 
@@ -263,30 +210,6 @@ type="page"
                     </div>
                   </div>
                   <div class="form-group row">
-                    <label for="hedef" class="col-3 col-form-label">Reklamın Hedef URL</label> 
-                    <div class="col-9">
-                      <div class="input-group">
-                        <input id="hedef" name="hedef" type="text" class="form-control" placeholder="Reklama tıklandığında yönlendirilecek sayfa. https://..." required="required"> 
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label for="reklambasligi" class="col-3 col-form-label">Reklam Başlığı Belirleyin</label> 
-                    <div class="col-9">
-                      <div class="input-group">
-                        <input id="reklambasligi" name="reklambasligi" type="text" class="form-control" placeholder="Reklamın başlığı belirtin. Çarpıcı bir kaç kelime ekleyin." required="required"> 
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label for="reklamaciklamasi" class="col-3 col-form-label">Reklam Açıklaması Belirleyin</label> 
-                    <div class="col-9">
-                      <div class="input-group">
-                        <textarea id="reklamaciklamasi" maxlength="300" name="reklamaciklamasi" type="text" class="form-control" placeholder="Reklamın açıklamasını belirtin. Açıklama 300 karakter ile sınırlandırılmıştır." rows="4" required="required"></textarea>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group row">
                     <div class="col-12 row">
                       <div class="col-md-3">
                         <h5>A Reklam</h5>
@@ -324,15 +247,6 @@ type="page"
                         <div class="custom-control custom-checkbox">
                         <input name="d-reklam-3-aylik" id="checkbox_d3" type="checkbox" class="custom-control-input" value="180"> 
                         <label for="checkbox_d3" class="custom-control-label">3 Ay (180 TL)</label><br><small class="text-muted">%20 indirimli</small></div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label for="file" class="col-3 col-form-label">Reklam Görselini Seçiniz</label> 
-                    <div class="col-9"><br>
-                      <div class="input-group">
-                        <input id="file" name="file" type="file"> 
-                        <p>Öne çıkarmak istediğiniz görseli seçin. Yatay formatta olmasına dikkat ediniz. 700x300 px olarak kırpılacaktır.</p>
                       </div>
                     </div>
                   </div>
