--- a/content/dergi/sayi-12/atik-malzeme/index.html
+++ b/content/dergi/sayi-12/atik-malzeme/index.html
@@ -4,7 +4,7 @@ description=""
 url="sayi-12/atik-malzeme-ile-tasarim"
 aciklama="Atık, insanların artık ihtiyaç duymadığı veya duymadıklarını düşündükleri, amacı anlaşılamayan ürünler ve bir ürünün üretimi sırasında ortaya çıkan kullanılmış/kullanılmamış yan ürünlerdir."
 type="sayfa"
-thumb="/img/"
+thumb="/img/atik-malzeme-ile-tasarim-thumbnail.jpg"
 date = "2021-08-10"
 sayi=["12"]
 sayfa="02"
