--- a/content/dergi/sayi-12/jonathan-ive/index.html
+++ b/content/dergi/sayi-12/jonathan-ive/index.html
@@ -313,7 +313,7 @@ tags= ["ana sayfa", "dergi"]
       <div class="col-md-4">
          <p>
             &quot;Apple ürünleri mükemmel çalışır. Çünkü tasarımcılarımız, her
-            şeyden önce basitliğe ve kullanışlılığa odaklanır. Yaptıkları işin
+            şeyden önce yalınlığa ve kullanışlılığa odaklanır. Yaptıkları işin
             başarısını, o işe kattıkları şeylerle değil, kullanıcının
             kazanımları üzerinden değerlendirirler.&quot;
          </p>
