--- a/content/dergi/sayi-12/roportaj/index.html
+++ b/content/dergi/sayi-12/roportaj/index.html
@@ -4,12 +4,12 @@ description=""
 url="sayi-12/endustriyel-tasarim-bolumu-roportaj"
 aciklama="Tercih döneminde bölüm ve üniversite hakkında bilgi edinmeniz için endüstriyel tasarım bölümünde okuyan arkadaşlarımız ile röportaj hazırladık. Röportajımıza katılan her bir arkadaşımıza teşekkür ederiz. Bölüme yeni başlayacak kişiler için oldukça faydalı olacağına inanıyoruz. Dizilimleri rastgele şekilde yaptık. Üzerine tıklayarak dilediğiniz röportajı okuyabilirsiniz."
 type="sayfa"
-thumb="/img/"
+thumb="/img/endustriyel-tasarim-bolumu-roportaj-thumbnail.jpg"
 date = "2021-08-10"
 sayi=["12"]
 sayfa="01"
 yazar=["markut", "zeynep dag"]
-tags= ["ana sayfa", "dergi"]
+tags= ["ana sayfa", "dergi", "roportaj"]
 +++
 
 <div class="container">
@@ -76,7 +76,7 @@ tags= ["ana sayfa", "dergi"]
                         >
                      </p>
                      <p>
-                        Küçüklüğümden beri origami merakım vardı. İki boyutludan
+                        Küçüklüğümden beri origamiye merakım vardı. İki boyutludan
                         üç boyutluya geçiş hep hoşuma gitmiştir. Yeni şeyler
                         keşfetmek, yeni ürünler alıp denemek bana hep merak
                         uyandırmıştır.
@@ -120,20 +120,15 @@ tags= ["ana sayfa", "dergi"]
                            >Proje sunumu ve jürileriniz nasıl oluyor?</strong
                         >
                      </p>
+                     <p>Ara juriler ve final jüriler proje derslerinde yapılıyor. Bazen saatlerce sürüyor. Herkes birbirinin projesini dinliyor. Jürilerde tasarlanan projelere ait maketler ve paftalar hazırlanıyor ve sırası gelen öğrenci paftalarını herkesin görebileceği yere asıp sunumunu yapıyor.</p>
+                  </li>
+                  <li>
+                     <p><strong>Hocalarla iletişiminiz nasıl?</strong></p>
                      <p>
                         Birbirinden bilgili hoca kadromuz mevcut. Her biri ayrı
                         ilgili davranıyor. Sadece sınıflarımız özel okullara
                         göre biraz kalabalık olduğu için birebir konuşma zamanı
                         az oluyor.
-                     </p>
-                  </li>
-                  <li>
-                     <p><strong>Hocalarla iletişiminiz nasıl?</strong></p>
-                     <p>
-                        İlk sene proje derslerinde, Basic Design derslerinde el
-                        çizimi ve maket üzerinden eğitim veriliyor. Daha sonra
-                        bilgisayar destekli tasarım programları öğrenilerek
-                        proje paftaları dijital bir şekilde hazırlanabiliyor.
                      </p>
                   </li>
                   <li>
@@ -144,12 +139,10 @@ tags= ["ana sayfa", "dergi"]
                         >
                      </p>
                      <p>
-                        El çizimi tabi önemli ancak bir zorunluluk değil çünkü
-                        İTÜ yetenek ile almıyor. Daha çok üç boyutlu düşünebilme
-                        yeteneğinin gelişmesi gerekiyor. Daha çok ürün
-                        inceledikçe daha fazla tasarımsal boyutta düşünme
-                        fırsatı doğuyor. Meraklı olmak ve çok araştırma yapmak
-                        Endüstriyel Tasarımda anahtar kelimeler.
+                        İlk sene proje derslerinde, Basic Design derslerinde el
+                        çizimi ve maket üzerinden eğitim veriliyor. Daha sonra
+                        bilgisayar destekli tasarım programları öğrenilerek
+                        proje paftaları dijital bir şekilde hazırlanabiliyor.
                      </p>
                   </li>
                   <li>
@@ -160,6 +153,18 @@ tags= ["ana sayfa", "dergi"]
                         >
                      </p>
                      <p>
+                        El çizimi tabi önemli ancak bir zorunluluk değil çünkü
+                        İTÜ yetenek ile almıyor. Daha çok üç boyutlu düşünebilme
+                        yeteneğinin gelişmesi gerekiyor. Daha çok ürün
+                        inceledikçe daha fazla tasarımsal boyutta düşünme
+                        fırsatı doğuyor. Meraklı olmak ve çok araştırma yapmak
+                        Endüstriyel Tasarımda anahtar kelimeler.
+                     </p>
+
+                  </li>
+                  <li>
+                     <p><strong>Maliyetli bir bölüm mü?</strong></p>
+                     <p>
                         Özellikle proje derslerinde hocalarımız birebir ya da
                         ölçekli maketler istedikleri için fazlasıyla kırtasiye
                         alışverişi gerçekleştiriyoruz. Çoğu aldığımız
@@ -169,9 +174,15 @@ tags= ["ana sayfa", "dergi"]
                         öğrencilerin stüdyo malzemelerini biriktirdiği,
                         depolandığı ve ayrıştığı ücretsiz odalar var.
                      </p>
+
                   </li>
                   <li>
-                     <p><strong>Maliyetli bir bölüm mü?</strong></p>
+                     <p>
+                        <strong
+                           >Okuduğun şehrin bölüme etkisi / katkısı
+                           nelerdir?</strong
+                        >
+                     </p>
                      <p>
                         İstanbul gibi bir megakentte yaşamanın tasarıma çok
                         büyük katkısı olduğunu söyleyebilirim. Özellikle
