--- a/content/dergi/sayi-12/kapak.html
+++ b/content/dergi/sayi-12/kapak.html
@@ -11,7 +11,7 @@ sayi=[
 ]
 sayfa="00"
 kapak="/img/markut-kapak-sayi-12-agustos-2021.svg"
-thumb="/img/markut-kapak-sayi-12-agustos-2021.svg"
+thumb="/img/markut-kapak-sayi-12-agustos-2021.png"
 type= "kapak"
 tags=[]
 +++ 
