--- a/content/dergi/sayi-13/kent-mobilyalari/index.html
+++ b/content/dergi/sayi-13/kent-mobilyalari/index.html
@@ -399,7 +399,7 @@ tags= ["ana sayfa", "dergi"]
          src="playground-new-york.jpg"
          referrerpolicy="no-referrer"
          alt="playground-new-york.jpg"
-      >}}   <small>New York, ABD</small></div>
+      >}}   <small>New York, ABD</small></div></div>
       <div class="row">
     <div class="col-md-4">
    <p><strong>Malzeme</strong></p>
@@ -449,11 +449,11 @@ tags= ["ana sayfa", "dergi"]
       >}}</div>
 </div>
 <hr>
-   <h2
+   <h3
       id="bilgilendirme-i̇lan-reklam-panoları-bilgi-panoları-meydan-saatleri-sokak-levhaları"
    >
       7. Bilgilendirme
-   </h2>
+   </h3>
    <h4 class="text-secondary mt-1">İlan-reklam panoları, bilgi panoları, meydan saatleri,
       sokak levhaları...</h4>
       <div class="row">
