--- a/content/dergi/sayi-13/tensegritiy/index.html
+++ b/content/dergi/sayi-13/tensegritiy/index.html
@@ -76,7 +76,7 @@ tags= ["ana sayfa", "dergi", "tasarim sozlugu"]
       </div>
       <div class="col-md-4">
          <video width="100%" height="100%" loop autoplay>
-            <source src="https://www.sayi-13/tasarimda-tensegrity-nedir/tensegrity-lego-video.mp4" />
+            <source src="https://www.markut.net/sayi-13/tasarimda-tensegrity-nedir/tensegrity-lego-video.mp4" />
          </video>
       </div>
    </div>
